# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\Auth\AuthController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -14,6 +15,22 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
+Route::post('auth/register', [AuthController::class, 'register']);
+Route::post('auth/login', [AuthController::class, 'loginUser']);
+
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
+});
+
+Route::group(['middleware' => ['auth:sanctum']], function() {
+    Route::get('/user', function(Request $request) { return $request->user(); });
+
+    Route::post('/updateUser', [AuthController::class, 'updateUser']);
+
+    Route::post('/auth/logout', function(Request $request) {
+        auth()->user()->tokens()->delete();
+        return [
+            'message' => 'token revoked'
+        ];
+    });
 });
